# earnings-agent

./: .env.example  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
src/app/: config.py  main.py
src/app/schemas/: extract.py  ingest.py
src/app/services/: delta.py  extract.py  ingest.py
tests/: test_delta.py  test_extract_html.py  test_ingest.py  test_ingest_idempotency.py  test_ingest_retry.py
tests/fixtures/: missing_eps.html  msft_press.html  sample_last_quarter.json  sample_last_year.json
