[project]
name = "earnings-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi", "uvicorn[standard]", "httpx", "tenacity",
  "pydantic>=2", "jinja2", "beautifulsoup4"
]
[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "types-requests"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]